# bitnami-docker-spark

./: docker-compose.yml  pyproject.toml
